--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Manjari&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+body, html {
+  margin: 0 !important;
+  overflow-y: hidden; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+
+h1{
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
+  font-size: 2rem;
+  color: black;
 }
 
 .navigation ul{
@@ -25,3 +33,246 @@ code {
   text-decoration: none;
   list-style: none;
 }
+.container{
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px auto;
+  position: relative;
+}
+
+.wrapper{
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 1580px;
+  padding-bottom: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.inside-wrapper{
+  width: 100%;
+  box-sizing: border-box;
+}
+.header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 60px;
+  background: #32bd7c;
+  border-bottom: 2px lightgrey solid;
+  box-shadow: 1px 0px 10px lightgrey;
+}
+
+.header-text{
+  padding: 0.9rem;
+  padding-left: 16.5%;
+  font-size: 1.6rem;
+  color: white;
+  font-family: 'Fredoka One', cursive;
+}
+
+
+.profile-container{
+  display: grid;
+  grid-template-columns: 0.8fr 5fr;
+  grid-template-rows: 100vh;
+  min-height: 100vh;
+}
+
+.profile-left-container{
+  padding: 1.2rem;
+  text-align: center;
+  border-right: 1px lightgrey solid;
+}
+
+.profile-left-container-header,
+.profile-left-container-header h1{
+  color: #3273bd !important;
+  font-size: 1.2rem !important;
+  text-align: center;
+}
+
+.profile-left-container-header{
+  border-bottom: 2px lightgrey solid;
+  margin-bottom: 15%;
+}
+
+.user-navbar{
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: end; 
+  margin: 0 auto;
+}
+
+.left-link{
+  width: 70%;
+  padding: 1rem;
+  justify-self: center;
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+}
+
+.left-link:hover{
+  color: #32bd7c;
+}
+.active{
+  color: white !important;
+  background: #32bd7c !important;
+}
+
+.user-navbar button, .user-navbar a{
+  cursor: pointer;
+  display: inline-block;
+  background: none;
+  border: none;
+  color: grey;
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 2%;
+  font-size: 1.3rem;
+
+}
+.profile-right-container{
+  overflow-y: scroll;
+  z-index: 1;
+  height: auto;
+  padding: 2rem;
+  padding-top: 6.2rem;
+  z-index: 1;
+}
+.container-header{
+  border-bottom: 1px lightgray solid;
+  margin-bottom: 2%;
+  line-height: 15px;
+}
+
+/*Flash card styles*/
+.flashcard-container{
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 300px;
+  grid-row-gap: 5%;
+  grid-column-gap: 1%;
+}
+
+.flashcard{
+  box-shadow: 0px 1px 5px grey;
+  width: 100%;
+  height: 100%;
+  z-index: 155;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(1fr,1fr);
+}
+
+.flashcard-buttons{
+  margin: 2%;
+  cursor: pointer;
+  align-self: end;
+  justify-self: end;
+}
+.flashcard-title,
+.flashcard-subject{
+  padding-top: 2%;
+  text-align: center;
+  align-self: start;
+  justify-self: center;
+  font-size: 1.6rem;
+}
+.flashcard button,
+.question-buttons-container button{
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: grey;
+  transition: 1s ease;
+  font-family: 'roboto', sans-serif;
+}
+
+.flashcard button:hover,
+.question-buttons-container button:hover{
+  color: #34a857;
+}
+
+.editable{
+  font-family: 'Manjari', sans-serif;
+  font-weight: lighter;
+  padding: 0.1rem;
+}
+
+.flashcard label{
+  border-bottom: 0.2px black solid;
+  font-family: 'Manjari', sans-serif;
+  padding: 0rem;
+}
+
+/*Question styles*/
+.addquestion-container{
+  padding: 2rem;
+  padding-bottom: 2rem;
+}
+
+.question-container{
+  margin-top: 5%;
+  background: white;
+  z-index: 25;
+}
+.question{
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 300px 50px;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1%;
+}
+
+.question-question, .question-answer{
+  box-shadow: 0px 1px 5px grey;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  grid-auto-rows: minmax(1fr,1fr);
+}
+
+.question-answer{
+}
+
+.question-buttons-container{
+  grid-column: 2/3;
+  justify-self: end;
+  height: 10%;
+}
+
+.question label{
+  color: #c4c2c1;
+  height: 2rem;
+  border-bottom: 2px #bd3252 solid;
+  width: 100%;
+  text-align: center;
+  padding-top: 1rem;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+.question-buttons-container button{
+
+}
+.addquestion-form{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1%;
+}
+#question, #answer{
+  width: 100%;
+  box-shadow: 0px 0px 2px grey;
+
+  height: 150px;
+}
+.addquestion-form-container{
+}
+#question{
+}
+
