--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,13 @@ body, html {
   margin: 0 !important;
   overflow-y: hidden; 
 }
+button{
+  cursor: pointer;
+}
+button:focus {
+  outline:0;
+}
+
 
 ::-webkit-scrollbar {
   width: 0px;
@@ -15,24 +22,102 @@ body, html {
 
 h1{
   font-family: 'Raleway', sans-serif;
-  font-weight: normal;
+  font-weight: bold;
+  letter-spacing: 1.5px;
   font-size: 2rem;
-  color: black;
+  color: white;
 }
 
-.navigation ul{
+/*Home page css*/
+.home-main-container{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 5px;
-  width: 10%;
+  grid-template-columns: 0.8fr 5fr;
+  grid-template-rows: 100vh;
+  min-height: 100vh;
+  z-index: -1;
 }
 
-.navigation ul li,
-.navigation ul li a{
-  width: 100%;
-  text-decoration: none;
-  list-style: none;
+.home-left-container{
+  padding-top: 1.2rem !important;
 }
+
+.login-form{
+  background: white;
+  margin: 0 auto;
+  margin-top: 3%;
+  display: grid;
+  grid-template-rows: 180px 1fr 60px;
+  box-shadow: 1px 1px 5px grey;
+  border-radius: 20px 20px 0 0;
+  min-width: 450px;
+  width: 50%;
+  z-index: 26;
+  padding-bottom: 3rem;
+}
+.login-form input, .login-form button{
+  margin-bottom: 10%;
+  background: none;
+  border: none;
+  text-align: center;
+  border-bottom: 1px lightgrey solid;
+  font-family: 'roboto', sans-serif;
+  font-size: 1rem;
+  width: 100%;
+  transition: 0.2s ease-in-out;
+}
+.login-form button:hover{
+  background: #255eb3;
+}
+.login-form button{
+  background: #0c203d;
+  color: white;
+  margin-bottom: 5rem;
+}
+
+.login-form-bottom{
+  display: block;
+  padding: 2rem;
+}
+.login-form-bottom2 button{
+  height: 50px;
+  width: 55%;
+  display: block;
+  margin: 0 auto;
+}
+
+
+
+
+.login-form input::placeholder{
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.container-header.login{
+  text-align: center;
+  padding-top: 1.5rem;
+  border-radius: 20px 20px 0 0;
+
+}
+
+
+.home-container{
+  text-align: center;
+  background: white;
+  margin-top: 5%;
+  background-size: 100% 100%;
+  border-radius: 10px;
+  box-shadow: none;
+  min-height: 100vh;
+
+}
+
+#home-pic{
+  width: 80%;
+  height: 25rem;
+}
+/*End Home Page css */
+
 .container{
   box-sizing: border-box;
   display: grid;
@@ -44,7 +129,6 @@ h1{
 .wrapper{
   box-sizing: border-box;
   width: 100%;
-  max-width: 1580px;
   padding-bottom: 5rem;
   margin-left: auto;
   margin-right: auto;
@@ -54,96 +138,151 @@ h1{
   box-sizing: border-box;
 }
 .header{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   height: 60px;
-  background: #32bd7c;
-  border-bottom: 2px lightgrey solid;
-  box-shadow: 1px 0px 10px lightgrey;
+  border-top: 5px #0c203d solid;
+  z-index: 25;
 }
 
 .header-text{
   padding: 0.9rem;
-  padding-left: 16.5%;
+  padding-left: 1%;
   font-size: 1.6rem;
-  color: white;
+  border-right: 5px #0c203d solid;
+  border-left: 5px #0c203d solid;
+  color: #0c203d;
+  width: 11.65%;
+  background: #fffef7;
   font-family: 'Fredoka One', cursive;
 }
 
 
 .profile-container{
+  z-index: 1;
   display: grid;
   grid-template-columns: 0.8fr 5fr;
   grid-template-rows: 100vh;
   min-height: 100vh;
 }
 
-.profile-left-container{
-  padding: 1.2rem;
+.profile-left-container, .home-left-container{
   text-align: center;
-  border-right: 1px lightgrey solid;
+  background: #0c203d;
+  z-index: 255;
 }
 
 .profile-left-container-header,
 .profile-left-container-header h1{
-  color: #3273bd !important;
+  color: white !important;
   font-size: 1.2rem !important;
-  text-align: center;
+  text-align: start;
+  padding-left: .8%;
 }
 
 .profile-left-container-header{
-  border-bottom: 2px lightgrey solid;
-  margin-bottom: 15%;
+  padding: 1rem;
+  background: #10294f;
 }
 
-.user-navbar{
+/*Navigation css*/
+.user-navbar, .home-buttons-container{
   display: grid;
   grid-template-columns: 1fr;
-  text-align: end; 
   margin: 0 auto;
+  
+  width: 100%;
 }
 
 .left-link{
-  width: 70%;
   padding: 1rem;
-  justify-self: center;
-  border-radius: 5px;
+  padding-left: 8%;
+  background: red;
+  color: white !important;
   transition: 0.2s ease-in;
 }
 
+.home-buttons-container button:hover,
 .left-link:hover{
-  color: #32bd7c;
+  font-size: 1.5rem;
+  text-shadow: 1px 5px 15px black;
 }
 .active{
-  color: white !important;
-  background: #32bd7c !important;
+  color:  white !important;
+  background: #255eb3 !important;
 }
 
-.user-navbar button, .user-navbar a{
+#home-button:before, #login-button:before, #register-button:before,
+#addcard-button:before, #editcard-button:before, #user-button:before,
+#logout-button:before{
+  content: '';
+  display: inline-block;
+  position: relative;
+  background: url('./images/home.png');
+  background-size: 25px 25px;
+  height: 25px;
+  width: 25px;
+  margin-right: 5%;
+  top: 0.25rem;
+}
+#login-button:before{
+  background: url('./images/login.png');
+  background-size: 25px 25px;
+}
+#register-button:before{
+  background: url('./images/register.png');
+  background-size: 25px 25px;
+}
+#addcard-button:before{
+  background: url('./images/addcard.png');
+  background-size: 25px 25px;
+}
+#editcard-button:before{
+  background: url('./images/edit.png');
+  background-size: 25px 25px;
+}
+#user-button:before{
+  background: url('./images/user.png');
+  background-size: 25px 25px;
+  top: 0.4rem;
+}
+#logout-button:before{
+  background: url('./images/logout.png');
+  background-size: 25px 25px;
+}
+.user-navbar button, .user-navbar a,
+.home-buttons-container button{
   cursor: pointer;
   display: inline-block;
   background: none;
   border: none;
   color: grey;
   font-family: 'Oswald', sans-serif;
-  text-align: center;
+  text-align: start;
   text-decoration: none;
   margin-bottom: 2%;
   font-size: 1.3rem;
 
 }
-.profile-right-container{
+/*End Navigation CSS */
+
+.profile-right-container,
+.home-right-container{
   overflow-y: scroll;
-  z-index: 1;
   height: auto;
-  padding: 2rem;
-  padding-top: 6.2rem;
-  z-index: 1;
+  margin-top: -3.75rem;
+  background: #fffdfb;
+  z-index: 5;
 }
+
 .container-header{
-  border-bottom: 1px lightgray solid;
-  margin-bottom: 2%;
+  padding-left: 3.5rem;
+  box-sizing: border-box;
+  margin-bottom: 5%;
   line-height: 15px;
+  width: 100%;
+  min-height: 62px;
+  margin-bottom: 10%;
+  background: #0c203d;
+  box-shadow: 2px 0px 8px grey;
 }
 
 /*Flash card styles*/
@@ -151,19 +290,25 @@ h1{
   box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 300px;
-  grid-row-gap: 5%;
-  grid-column-gap: 1%;
+  width: 95%;
+  margin: 0 auto;
+  margin-bottom: 15rem;
+  grid-auto-rows: 320px;
+  grid-row-gap: 2%;
+  grid-column-gap: 1.5%;
+  padding: 1rem;
 }
 
 .flashcard{
-  box-shadow: 0px 1px 5px grey;
+  box-shadow: 0px 1px 8px grey;
   width: 100%;
+  justify-self: center;
   height: 100%;
   z-index: 155;
   display: grid;
+  background: white;
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(1fr,1fr);
+  grid-auto-rows: minmax(auto,200px);
 }
 
 .flashcard-buttons{
@@ -174,10 +319,12 @@ h1{
 }
 .flashcard-title,
 .flashcard-subject{
-  padding-top: 2%;
+  padding-top: 4%;
   text-align: center;
   align-self: start;
   justify-self: center;
+  max-height: 85px;
+  height: 85px;
   font-size: 1.6rem;
 }
 .flashcard button,
@@ -192,7 +339,7 @@ h1{
 
 .flashcard button:hover,
 .question-buttons-container button:hover{
-  color: #34a857;
+  color: #2764bf;
 }
 
 .editable{
@@ -208,19 +355,47 @@ h1{
 }
 
 /*Question styles*/
+.question-main-container{
+  display: grid;
+  grid-template-columns: 2.5fr 1fr;
+}
 .addquestion-container{
-  padding: 2rem;
-  padding-bottom: 2rem;
+  box-sizing: border-box;
+  top: 12.3%;
+  right: 2.2%;
+  padding: 0 1rem 0 1rem;
+  position: fixed;
+  background: #1e498a;
+  width: 21%;
+  height: 500px;
+  margin: 0 auto;
+  margin-bottom: 3%;
+  border-radius: 7px;
+  box-shadow: 1px 2px 5px grey;
+}
+
+.addquestion-container h1{
+  color: white;
+  text-align: center;
 }
 
 .question-container{
-  margin-top: 5%;
-  background: white;
-  z-index: 25;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  margin: 0 auto;
+  grid-auto-rows: 320px;
+  grid-row-gap: 2%;
+  grid-column-gap: 2%;
+  padding: 1rem;
+  margin-bottom: 15rem;
 }
 .question{
   box-sizing: border-box;
   display: grid;
+  width: 100%;
+  justify-self: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 300px 50px;
   grid-row-gap: 1rem;
@@ -229,6 +404,7 @@ h1{
 
 .question-question, .question-answer{
   box-shadow: 0px 1px 5px grey;
+  background: white;
   width: 100%;
   height: 100%;
   display: grid;
@@ -237,8 +413,6 @@ h1{
   grid-auto-rows: minmax(1fr,1fr);
 }
 
-.question-answer{
-}
 
 .question-buttons-container{
   grid-column: 2/3;
@@ -249,7 +423,7 @@ h1{
 .question label{
   color: #c4c2c1;
   height: 2rem;
-  border-bottom: 2px #bd3252 solid;
+  border-bottom: 2px #0c203d solid;
   width: 100%;
   text-align: center;
   padding-top: 1rem;
@@ -257,13 +431,12 @@ h1{
 
 }
 
-.question-buttons-container button{
-
-}
 .addquestion-form{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 1%;
+  grid-template-columns: 1fr;
+  grid-column-gap: 5%;
+  grid-row-gap: 2.5%;
+  justify-items: center;
 }
 #question, #answer{
   width: 100%;
@@ -271,8 +444,35 @@ h1{
 
   height: 150px;
 }
-.addquestion-form-container{
+.addquestion-form-container,
+.addanswer-form-container{
+  width: 100%;
+  justify-self: center;
 }
-#question{
+#question, #answer{
+  padding: 1rem;
+  box-sizing: border-box;
+  font-size: 1rem;
+  font-family: 'Manjari', sans-serif;
 }
+
+#question::placeholder,
+#answer::placeholder{
+  text-align: center;
+  padding-top: 3.4rem;
+  font-size: 1rem;
+  font-family: 'Manjari', sans-serif;
+}
+
+#add-button{
+  background: none;
+  background: white;
+  border: none;
+  width: 100%;
+  height: 50px;
+  font-family: 'Roboto',sans-serif;
+  font-weight: bold;
+}
+
+/*End Question styles*/
 
