--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,11 @@ button:focus {
   outline:0;
 }
 
+a{
+  color: black;
+  text-decoration: none;
+}
+
 
 ::-webkit-scrollbar {
   width: 0px;
@@ -48,7 +53,7 @@ h1{
   display: grid;
   grid-template-rows: 180px 1fr 60px;
   box-shadow: 1px 1px 5px grey;
-  border-radius: 20px 20px 0 0;
+  border-radius: 20px;
   min-width: 450px;
   width: 50%;
   z-index: 26;
@@ -145,7 +150,7 @@ h1{
 
 .header-text{
   padding: 0.9rem;
-  padding-left: 1%;
+  padding-left: 0.9%;
   font-size: 1.6rem;
   border-right: 5px #0c203d solid;
   border-left: 5px #0c203d solid;
@@ -175,7 +180,7 @@ h1{
   color: white !important;
   font-size: 1.2rem !important;
   text-align: start;
-  padding-left: .8%;
+  padding-left: 2.5%;
 }
 
 .profile-left-container-header{
@@ -212,7 +217,7 @@ h1{
 
 #home-button:before, #login-button:before, #register-button:before,
 #addcard-button:before, #editcard-button:before, #user-button:before,
-#logout-button:before{
+#logout-button:before, #quizcard-button:before{
   content: '';
   display: inline-block;
   position: relative;
@@ -248,6 +253,10 @@ h1{
   background: url('./images/logout.png');
   background-size: 25px 25px;
 }
+#quizcard-button:before{
+  background: url('./images/quiz.png');
+  background-size: 25px 25px;
+}
 .user-navbar button, .user-navbar a,
 .home-buttons-container button{
   cursor: pointer;
@@ -274,8 +283,9 @@ h1{
 }
 
 .container-header{
-  padding-left: 3.5rem;
+  padding-left: 3.8rem;
   box-sizing: border-box;
+
   margin-bottom: 5%;
   line-height: 15px;
   width: 100%;
@@ -301,12 +311,15 @@ h1{
 
 .flashcard{
   box-shadow: 0px 1px 8px grey;
-  width: 100%;
+  border: #cc9124 solid;
+  border-width: 0px 0px 5px 0px;
+  width: 90%;
   justify-self: center;
   height: 100%;
   z-index: 155;
   display: grid;
   background: white;
+  border-radius: 11px;
   grid-template-columns: 1fr;
   grid-auto-rows: minmax(auto,200px);
 }
@@ -358,11 +371,13 @@ h1{
 .question-main-container{
   display: grid;
   grid-template-columns: 2.5fr 1fr;
+  width: 94%;
+  margin: 0 auto;
 }
 .addquestion-container{
   box-sizing: border-box;
   top: 12.3%;
-  right: 2.2%;
+  right: 2.9%;
   padding: 0 1rem 0 1rem;
   position: fixed;
   background: #1e498a;
@@ -389,7 +404,7 @@ h1{
   grid-row-gap: 2%;
   grid-column-gap: 2%;
   padding: 1rem;
-  margin-bottom: 15rem;
+  margin-bottom: 20rem;
 }
 .question{
   box-sizing: border-box;
@@ -476,3 +491,85 @@ h1{
 
 /*End Question styles*/
 
+/*Quiz Styles*/
+.flashcard.study{
+  justify-self: center;
+  box-shadow: 0px -10px 15px lightgrey;
+  border-width: 5px 0px 0px 0px;
+  grid-auto-rows: 130px;
+  height: 100%;
+}
+
+
+.xx{
+  display: grid;
+}
+.view-quiz-header{
+  border-radius: 8px;
+  width: 88%;
+  margin: 0 auto;
+  min-height: 10rem;
+  margin-bottom: -3.8%;
+}
+.view-quiz-header h1{
+  color: #0c203d;
+}
+.question-container.quiz{
+  margin-top: 3%;
+  position: relative;
+  justify-self: center;
+  max-height: 200px;
+  width: 85%;
+  text-align: center;
+}
+
+.question.study{
+  grid-template-columns: 1fr;
+  width: 50%;
+  justify-self: center;
+  margin: 0 auto;
+  transition: 0.5s ease;
+
+}
+
+
+.question-question{
+  align-items: center;
+  min-height: 350px;
+  transition: 0.5s ease;
+  border-radius: 8px;
+}
+.question-container-question{
+  margin: 0 auto;
+  justify-self: center;
+  width: 100%;
+}
+
+.quiz-buttons-container{
+  position: relative;
+  width: 50%;
+  margin: 0 auto;
+  bottom: 20%;
+  text-align: center;
+}
+.quiz-buttons-container button{
+  background: none;
+  border: none;
+  color: #0c203d;
+  font-size: 3rem;
+}
+
+.question-question button{
+  background: #0c203d;
+  color: white;
+  padding: 0.5rem;
+  top: 50%;
+  border-radius: 0 0 8px 8px;
+  width: 100%;
+  position: relative;
+  box-shadow: 0px -5px 5px lightgrey;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+/*End Quiz Styles*/
