--- a/client/src/index.css
+++ b/client/src/index.css
@@ -284,17 +284,45 @@ h1{
 
 .container-header{
   padding-left: 3.8rem;
-  box-sizing: border-box;
-
   margin-bottom: 5%;
   line-height: 15px;
-  width: 100%;
   min-height: 62px;
   margin-bottom: 10%;
   background: #0c203d;
-  box-shadow: 2px 0px 8px grey;
 }
 
+.container-header.profile{
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+}
+/*Container Middle Header  */
+.container-middle-header{
+}
+/*End Container Middle Header */
+/*Search Box Styles */
+.search-input{
+  border: none;
+  color: darkgrey;
+  width: 20.8rem;
+  border-radius: 8px;
+  height: 0.5rem;
+  box-shadow: inset -0px 1px 6px #0c203d;
+  padding: 1rem 0 1rem 0;
+  outline: none;
+  display: block;
+  margin: 0 auto;
+  margin-top: 1%;
+  font-weight: bold;
+  text-align: center;
+}
+
+.search-input::placeholder{
+  color: black;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+
+}
+/*End Search Box Styles */
 /*Flash card styles*/
 .flashcard-container{
   box-sizing: border-box;
@@ -320,8 +348,21 @@ h1{
   display: grid;
   background: white;
   border-radius: 11px;
+  left: 0;
   grid-template-columns: 1fr;
   grid-auto-rows: minmax(auto,200px);
+  animation: fadeIn 0.3s ease-in;
+  transform: translateY(0px);
+
+}
+
+@keyframes fadeIn{
+  from{
+    transform: translateY(500px);
+  }
+  to{
+    transform: translateY(0px);
+  }
 }
 
 .flashcard-buttons{
@@ -339,6 +380,8 @@ h1{
   max-height: 85px;
   height: 85px;
   font-size: 1.6rem;
+  max-width: 15rem;
+
 }
 .flashcard button,
 .question-buttons-container button{
@@ -358,6 +401,7 @@ h1{
 .editable{
   font-family: 'Manjari', sans-serif;
   font-weight: lighter;
+  text-align: center;
   padding: 0.1rem;
 }
 
@@ -498,6 +542,11 @@ h1{
   border-width: 5px 0px 0px 0px;
   grid-auto-rows: 130px;
   height: 100%;
+  transition: 0.2s ease-in-out;
+}
+
+.flashcard.study:hover{
+  transform:scale(1.1);
 }
 
 
@@ -521,6 +570,7 @@ h1{
   max-height: 200px;
   width: 85%;
   text-align: center;
+  perspective: 1000px;
 }
 
 .question.study{
@@ -533,12 +583,13 @@ h1{
 }
 
 
-.question-question{
+.question-question.question{
   align-items: center;
   min-height: 350px;
   transition: 0.5s ease;
   border-radius: 8px;
 }
+
 .question-container-question{
   margin: 0 auto;
   justify-self: center;
@@ -547,7 +598,7 @@ h1{
 
 .quiz-buttons-container{
   position: relative;
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   bottom: 20%;
   text-align: center;
@@ -556,20 +607,74 @@ h1{
   background: none;
   border: none;
   color: #0c203d;
-  font-size: 3rem;
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 2rem;
+}
+.quiz-buttons-container> span{
+  display: inline-block;
+  bottom: 0.25rem;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+
+}
+.question-question.studycard{
+  perspective: 1000px;
+  min-height: 350px;
+  position: relative;
+  animation: flipQuestionY 0.3s linear;
+  transform: rotateY(0deg);
 }
 
-.question-question button{
-  background: #0c203d;
-  color: white;
-  padding: 0.5rem;
-  top: 50%;
-  border-radius: 0 0 8px 8px;
-  width: 100%;
+.question-question.studycardx{
+  animation: flipQuestionx 0.3s linear;
+  perspective: 1000px;
+  min-height: 350px;
   position: relative;
-  box-shadow: 0px -5px 5px lightgrey;
+  transform: rotateX(0deg);
+
+}
+
+
+
+@keyframes flipQuestionY{
+  from{
+    transform: rotateY(-180deg);
+  }
+  translate{
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes flipQuestionx{
+  from{
+    transform: rotateX(-180deg);
+  }
+  translate{
+    transform: rotateX(0deg);
+  }
+}
+
+.question-question.studycard button,
+.question-question.studycardx button{
+  background: #f2f0ee;
+  color: #0c203d;
+  font-weight: bolder;
+  padding: 0.5rem;
+  height: 40%;
+  top: 50%;
+  width: 30%;
   border: none;
+  position: relative;
   font-family: 'Roboto', sans-serif;
 }
+
+#question-count{
+  font-family: 'Manjari', sans-serif;
+  position: relative;
+  bottom: 3%;
+}
+
 
 /*End Quiz Styles*/
