Added pop up modals and improved multiple choice quiz game

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,11 +9,17 @@ body, html {
 }
 button{
   cursor: pointer;
+  border: none;
+  background: none;
+  font-family: 'Raleway'
 }
 button:focus {
   outline:0;
 }
+span{
+  font-family: 'Manjari',sans-serif;
 
+}
 a{
   color: black;
   text-decoration: none;
@@ -153,12 +159,18 @@ h1{
   padding: 0.9rem;
   padding-left: 0.9%;
   font-size: 1.6rem;
+  background: red;
+  width: 11.8%;
   border-right: 5px #0c203d solid;
   border-left: 5px #0c203d solid;
   color: #0c203d;
-  width: 11.65%;
   background: #fffef7;
-  font-family: 'Fredoka One', cursive;
+  z-index: 255;
+
+}
+
+.header-text span{
+  font-family: 'Fredoka One', cursive !important;
 }
 
 
@@ -303,22 +315,22 @@ h1{
 }
 /*Container Middle Header  */
 .container-middle-header{
+  display: grid;
 }
 /*End Container Middle Header */
+
 /*Search Box Styles */
 .search-input{
   border: none;
-  color: darkgrey;
-  width: 20.8rem;
-  border-radius: 8px;
+  color: rgb(124, 123, 123);
+  width: 100%;
   height: 0.5rem;
-  box-shadow: inset -0px 1px 6px #0c203d;
-  padding: 1rem 0 1rem 0;
+  box-shadow: inset -0px 1px 3px #0c203d;
+  padding: 1.1rem 0 1rem 0;
   outline: none;
   display: block;
-  margin: 0 auto;
-  margin-top: 1%;
   font-weight: bold;
+  border-radius: 8px;
   text-align: center;
 }
 
@@ -326,7 +338,23 @@ h1{
   color: black;
   font-family: 'Roboto', sans-serif;
   text-align: center;
+}
+.searchbox-container{
+  margin-top: 0.9%;
+  justify-self: center;
+  border-radius: 8px;
+  min-width: 400px;
+}
 
+.searchbox-container::before{
+  background: url('./images/search.png');
+  background-size: 25px 25px;
+  content: '';
+  margin-top: 0.55%;
+  margin-left: 0.9%;
+  position: absolute;
+  display: inline;
+  height: 25px; width: 25px;
 }
 /*End Search Box Styles */
 /*Flash card styles*/
@@ -539,7 +567,7 @@ h1{
 
 /*End Question styles*/
 
-/*Quiz Styles*/
+/*Study Styles*/
 .flashcard.study{
   justify-self: center;
   box-shadow: 0px -10px 15px lightgrey;
@@ -562,10 +590,16 @@ h1{
   width: 88%;
   margin: 0 auto;
   min-height: 10rem;
-  margin-bottom: -3.8%;
+  line-height: 25px;
+  margin-bottom: -3%;
+  font-family: 'Manjari',sans-serif;
 }
 .view-quiz-header h1{
   color: #0c203d;
+}
+.view-quiz-header p{
+  margin-left: 2%;
+  font-size: 1.2rem;
 }
 .question-container.quiz{
   margin-top: 3%;
@@ -679,6 +713,77 @@ h1{
   position: relative;
   bottom: 3%;
 }
+
+
+
+/*Study Styles*/
+.quiz-score-container{
+  font-family: 'Raleway',sans-serif;
+  margin: 0 auto;
+  width: 90%;
+  margin-top: -1%;
+  text-align: center;
+  font-size: 1.8rem;
+  min-height: 50px;
+}
+
+.quiz-score-container span{
+  display: inline-block;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.quizgame-buttons-container{
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 5%;
+  grid-column-gap: 5%;
+  grid-auto-rows: minmax(200px, 200px);
+}
+
+.quizgame-buttons-container button{
+  border: none;
+  background: white;
+  border-radius: 8px;
+  transition: 0.2s ease-in;
+  font-size: 1.1rem;
+  padding-bottom: 5%;
+}
+
+.quizgame-buttons-container button:hover{
+  font-weight: bold;
+}
+
+.quizgame-buttons-container-button{
+  box-shadow: 0px 3px 8px darkgrey;
+
+  background: white;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 10fr;
+  transition: 0.2s ease-in;
+}
+
+.quizgame-buttons-container-button span{
+  padding: 1%;
+  background: #0c203d;
+  color: white;
+  border-radius: 8px 0 8px 0;
+  justify-self: start;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+}
+
+
+
+.green{
+  color: green;
+}
+.red{
+  color: red;
+}
+/*Quiz Styles*/
 
 
 /*End Quiz Styles*/
