--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,28 +53,41 @@ h1{
 }
 
 .login-form{
-  background: white;
   margin: 0 auto;
   margin-top: 3%;
+  background: white;
   display: grid;
-  grid-template-rows: 180px 1fr 60px;
+  grid-template-rows: auto-fit 1fr 60px;
   box-shadow: 1px 1px 5px grey;
-  border-radius: 20px;
+  border-radius: 10px;
   min-width: 450px;
-  width: 50%;
+  width: 40%;
   z-index: 26;
   padding-bottom: 3rem;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .login-form input, .login-form button{
   margin-bottom: 10%;
   background: none;
   border: none;
   text-align: center;
+  background: lightgrey;
+  padding: 1rem 0 1rem 0;
   border-bottom: 1px lightgrey solid;
   font-family: 'roboto', sans-serif;
   font-size: 1rem;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   transition: 0.2s ease-in-out;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .login-form button:hover{
   background: #255eb3;
@@ -91,7 +104,7 @@ h1{
 }
 .login-form-bottom2 button{
   height: 50px;
-  width: 55%;
+  width: 85%;
   display: block;
   margin: 0 auto;
 }
@@ -105,10 +118,17 @@ h1{
 }
 
 .container-header.login{
-  text-align: center;
   padding-top: 1.5rem;
-  border-radius: 20px 20px 0 0;
-
+  padding: 0;
+  padding-top: 1.5%;
+  text-align: center;
+  max-height: 98px;
+  border-radius: 5px 10px 0 0;
+  box-shadow: 1px 3px 8px darkgrey;
+  -webkit-border-radius: 5px 10px 0 0;
+  -moz-border-radius: 5px 10px 0 0;
+  -ms-border-radius: 5px 10px 0 0;
+  -o-border-radius: 5px 10px 0 0;
 }
 
 
@@ -163,7 +183,7 @@ h1{
   border-right: 5px #0c203d solid;
   border-left: 5px #0c203d solid;
   color: #0c203d;
-  background: #fffef7;
+  background: url('./images/right.png');
   z-index: 255;
 
 }
@@ -227,7 +247,9 @@ h1{
   color:  white !important;
   background: #255eb3 !important;
 }
-
+#user-button h1{
+  font-family: 'roboto', sans-serif !important;
+}
 #home-button:before, #login-button:before, #register-button:before,
 #addcard-button:before, #editcard-button:before, #user-button:before,
 #logout-button:before, #studycard-button:before, #quizcard-button:before{
@@ -281,7 +303,7 @@ h1{
   background: none;
   border: none;
   color: grey;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: start;
   text-decoration: none;
   margin-bottom: 2%;
@@ -324,15 +346,21 @@ h1{
   color: rgb(124, 123, 123);
   width: 100%;
   height: 0.5rem;
-  box-shadow: inset -0px 1px 3px #0c203d;
+  background: #f1f3f4;
   padding: 1.1rem 0 1rem 0;
   outline: none;
   display: block;
   font-weight: bold;
-  border-radius: 8px;
+  border-radius: 4px;
   text-align: center;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
 }
-
+.search-input:focus{
+  background: white;
+}
 .search-input::placeholder{
   color: black;
   font-family: 'Roboto', sans-serif;
@@ -386,10 +414,14 @@ h1{
   grid-auto-rows: minmax(auto,200px);
   animation: fadeIn 0.3s ease-in;
   transform: translateY(0px);
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  -ms-border-radius: 11px;
+  -o-border-radius: 11px;
 }
 .star{
   box-sizing: border-box;
-  padding: 0.2rem 1rem 0.5rem 1rem;
+  padding: 0rem 1rem 0.2rem 1rem;
   color: darkgrey;
   font-size: 3rem;
   max-height: 10px;
@@ -398,6 +430,39 @@ h1{
 
 .star.yellow{
   color: #ffb428;
+}
+
+.flashcard-header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.flashcard-header-right{
+  justify-self: end;
+  padding: 0.2rem 0.3rem 0.5rem 1rem;
+}
+
+.flashcard-header-right img{
+  opacity: 0.5;
+}
+
+.flashcard-header-right-content{
+  display: inline-block;
+  position: absolute;
+  padding: 1rem;
+  top: 5%;
+  right: 0;
+  border-radius: 5px;
+  z-index: -1;
+  opacity: 0;
+}
+
+.flashcard-header-right-content.show{
+  opacity: 1;
+}
+
+#xxx{
+  cursor: pointer;
 }
 
 @keyframes fadeIn{
@@ -442,6 +507,12 @@ h1{
   font-family: 'Manjari', sans-serif;
   font-weight: lighter;
   padding: 0.1rem;
+  padding-top: 0.5rem;
+  font-size: 1.3rem;
+}
+
+.editable.show{
+  border: 1px lightblue dotted;
 }
 
 .flashcard label{
@@ -592,7 +663,7 @@ pre{
 }
 
 .orderby-buttons-container.study{
-  margin-top: -2.5%;
+  margin-top: -2%;
 }
 
 .flashcard.study:hover{
@@ -657,7 +728,7 @@ pre{
   position: relative;
   width: 100%;
   margin: 0 auto;
-  bottom: 20%;
+  bottom: 180%;
   text-align: center;
 }
 .quiz-buttons-container button{
@@ -692,7 +763,8 @@ pre{
   animation: flipQuestionx 0.3s linear;
   perspective: 1000px;
   min-height: 350px;
-  
+  max-width: 820px;
+  justify-self: stretch;
   position: relative;
   transform: rotateX(0deg);
 
