--- a/client/src/index.css
+++ b/client/src/index.css
@@ -134,7 +134,6 @@ h1{
 
 .home-container{
   text-align: center;
-  background: white;
   margin-top: 5%;
   background-size: 100% 100%;
   border-radius: 10px;
@@ -260,7 +259,8 @@ input:focus{
 }
 #home-button:before, #login-button:before, #register-button:before,
 #addcard-button:before, #editcard-button:before, #user-button:before,
-#logout-button:before, #studycard-button:before, #quizcard-button:before{
+#logout-button:before, #studycard-button:before, #quizcard-button:before,
+#dnd-button:before{
   content: '';
   display: inline-block;
   position: relative;
@@ -302,6 +302,10 @@ input:focus{
 }
 #quizcard-button:before{
   background: url('./images/quiz.png');
+  background-size: 25px 25px;
+}
+#dnd-button:before{
+  background: url('./images/dnd.png');
   background-size: 25px 25px;
 }
 .user-navbar button, .user-navbar a,
@@ -542,30 +546,27 @@ input:focus{
 }
 
 /*Question styles*/
-.question-main-container{
-  display: grid;
-  grid-template-columns: 2.5fr 1fr;
-  width: 94%;
-  margin: 0 auto;
-}
+
 .addquestion-container{
-  box-sizing: border-box;
-  top: 12.3%;
-  right: 2.3%;
-  padding: 0 1rem 0 1rem;
-  position: fixed;
-  background: #1e498a;
-  width: 21%;
-  height: 500px;
-  margin: 0 auto;
-  margin-bottom: 3%;
   border-radius: 7px;
-  box-shadow: 1px 2px 5px grey;
+  box-sizing: border-box;
+  padding: 0 1rem 0 1rem;
+  width: 70%;
+  height: 300px;
+  margin: 0 auto;
+  z-index: 15;
+  border-bottom: 2px lightgrey solid;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 
+
+
 .addquestion-container h1{
-  color: white;
-  text-align: center;
+  color: #0c203d;
+  font-size: 1.5rem;
 }
 
 .question-container{
@@ -574,19 +575,16 @@ input:focus{
   grid-template-columns: 1fr;
   width: 100%;
   margin: 0 auto;
-  grid-auto-rows: 320px;
-  grid-row-gap: 2%;
-  grid-column-gap: 2%;
   padding: 1rem;
-  margin-bottom: 20rem;
+  margin-bottom: 15rem;
 }
 .question{
   box-sizing: border-box;
   display: grid;
-  width: 100%;
-  justify-self: center;
+  width: 90%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 300px 50px;
+  margin: 0 auto;
   grid-row-gap: 1rem;
   grid-column-gap: 1%;
  
@@ -596,10 +594,9 @@ input:focus{
   box-shadow: 0px 1px 5px grey;
   background: white;
   height: 100%;
-  max-width: 550px;
   display: grid;
   grid-auto-columns: 1fr;
-  justify-items: center;
+  justify-self: stretch;
 }
 
 .editable{
@@ -630,14 +627,14 @@ pre{
 
 .addquestion-form{
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-column-gap: 5%;
   grid-row-gap: 2.5%;
   justify-items: center;
 }
 #question, #answer{
   width: 100%;
-  box-shadow: 0px 0px 2px grey;
+  box-shadow: 0px 0px 5px lightgrey;
 
   height: 150px;
 }
@@ -663,10 +660,14 @@ pre{
 
 #add-button{
   background: none;
-  background: white;
+  background: #60ffa0;
+  color: white;
   border: none;
-  width: 100%;
+  width: 20%;
+  min-width: 150px;
   height: 50px;
+  justify-self: end;
+  grid-column: 2/3;
   font-family: 'Roboto',sans-serif;
   font-weight: bold;
 }
@@ -934,3 +935,46 @@ pre{
 }
 
 /*End order by styles */
+
+/*DND Styles*/
+.dnd{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  min-height: 950px;
+  overflow: scroll;
+}
+
+.dnd-questions-container, .dnd-answers-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.menu{
+  margin: 5px;
+  min-height: 120px;
+  grid-template-columns: 1fr 1fr;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.dnd-card{
+  background: white;
+  box-shadow: 1px 1px 6px lightgrey;
+  min-height: 60px;
+  text-align: center;
+  font-family: 'manjari', sans-serif;
+  width: 100%;
+  padding: 1rem;
+
+}
+
+.dnd-card.answer{
+  background: #d6ffd1;
+  color: black;
+}
+
+#dnd-question-header{
+  grid-column: 1/3;
+  background: ;
+}
+/*End DND styles */
