--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 body, html {
   margin: 0 !important;
-  overflow-y: hidden; 
+  overflow-y: hidden;
+ 
 }
 button{
   cursor: pointer;
@@ -169,7 +170,7 @@ h1{
 }
 .header{
   height: 60px;
-  border-top: 5px #13305c solid;
+  border-top: 2px #13305c solid;
   background: white;
   z-index: 25;
 }
@@ -182,9 +183,9 @@ input:focus{
   padding: 0.9rem;
   padding-left: 0.9%;
   font-size: 1.6rem;
-  width: 11.65%;
-  border-right: 5px #13305c solid;
-  border-left: 5px #13305c solid;
+  width: 11.95%;
+  border-right: 2px #13305c solid;
+  border-left: 2px #13305c solid;
   color: #13305c;
   background: url('./images/right.png');
   z-index: 255;
@@ -938,43 +939,103 @@ pre{
 
 /*DND Styles*/
 .dnd{
+  border-top: 1px lightgrey solid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  min-height: 950px;
-  overflow: scroll;
+  grid-template-columns: 2fr 1fr;
+  margin: 0 auto;
+  width: 88%;
+  min-height: 850px;
+  padding: 0.3rem 0 0 0;
+  justify-items: stretch;
+  margin-bottom: 2.2rem;
+  column-gap: 2%;
+  overflow: hidden;
 }
 
 .dnd-questions-container, .dnd-answers-container{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 40px;
 }
-
+.dnd-answers-container{
+  grid-template-columns: 1fr;
+  overflow-y: hidden;
+}
 .menu{
-  margin: 5px;
-  min-height: 120px;
-  grid-template-columns: 1fr 1fr;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
+  display: grid;
+  height: 350px;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 50%;
+  grid-column-gap: 1rem;
+  grid-column-gap: 3%;
 }
 
+.menu.answers{
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 155px;
+  grid-row-gap: 2%;
+  grid-column-gap: 2%;
+  padding: 0 0.2rem 0 0.2rem;
+}
+
+
+
+#isIncorrect{
+  border: 2px red solid;
+}
+
+#isCorrect{
+  border: 2px green solid;
+}
 .dnd-card{
+  border: 1px lightgrey solid;
+  font-size: 0.9rem;
   background: white;
-  box-shadow: 1px 1px 6px lightgrey;
-  min-height: 60px;
-  text-align: center;
+  box-shadow: 0px 0px 2px lightgrey;
   font-family: 'manjari', sans-serif;
-  width: 100%;
   padding: 1rem;
 
 }
 
 .dnd-card.answer{
-  background: #d6ffd1;
+  background: #c9ddff;
   color: black;
+  box-shadow: 0px -1px 2px lightgrey;
 }
 
 #dnd-question-header{
-  grid-column: 1/3;
-  background: ;
+  grid-column: 1/4;
+  max-height: 50px;
+  color: grey;
 }
+
+.view-quiz-header.dndgame{
+  max-height: 60px !important;
+}
+.view-quiz-header.dndgame h1{
+  margin-bottom: 0rem;
+}
+
+.dnd-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.dnd-container button{
+  justify-self: end;
+  align-self: center;
+  background: #60ffa0;
+  font-weight: bold;
+  color: white;
+  height: 30px;
+  box-shadow: 2px 2px 2px lightgrey;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+
 /*End DND styles */
